updated prereq and readme

--- a/deploy/roles/app_deploy/tasks/prereq.yml
+++ b/deploy/roles/app_deploy/tasks/prereq.yml
@@ -16,7 +16,7 @@
 - name: Install GPG keys.
   become: yes
   become_user: root
-  command: 'gpg2 --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB'
+  shell: 'gpg2 --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB'
 
 - name: Install ruby version manager.
   become: yes
@@ -33,7 +33,7 @@
 - name: Install ruby.
   become: yes
   become_user: root
-  shell: 'amazon-linux-extras install ruby2.4'
+  shell: 'amazon-linux-extras install ruby2.4 -y'
 
 - name: Install git.
   become: yes
