--- a/deploy/roles/app_deploy/tasks/prereq.yml
+++ b/deploy/roles/app_deploy/tasks/prereq.yml
@@ -17,6 +17,7 @@
   become: yes
   become_user: root
   shell: 'gpg2 --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB'
+  retries: 3
 
 - name: Install ruby version manager.
   become: yes
@@ -39,13 +40,25 @@
   become: yes
   become_user: root
   shell: 'yum -y install git'
+  args:
+   warn: false
 
 - name: install rdoc
   become: yes
   become_user: root
   shell: 'gem install rdoc --no-document'
 
+- name: create directory
+  become: yes
+  become_user: root
+  file:
+   state: directory
+   path: '/data/apps/simple-sinatra-app'
+   mode: 0777
+
 - name: Install bundler.
   become: yes
   become_user: root
   shell: 'gem install bundler'
+  args:
+    chdir: '/data/apps/simple-sinatra-app'
