updated security group.

--- a/aws config/ec2.yml
+++ b/aws config/ec2.yml
@@ -326,6 +326,10 @@ Resources:
         FromPort: '3389'
         ToPort: '3389'
         CidrIp: 0.0.0.0/0
+      - IpProtocol: tcp
+        FromPort: '80'
+        ToPort: '80'
+        CidrIp: 0.0.0.0/0
 
   AppElb:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
