--- a/deploy/roles/app_deploy/tasks/deploy.yml
+++ b/deploy/roles/app_deploy/tasks/deploy.yml
@@ -14,7 +14,8 @@
   become: yes
   become_user: root
   #command: 'git -c http.sslVerify=false clone -b {{ branch }} --single-branch https://{{ user }}:{{ pass }}@{{ git_link }}'
-  shell: 'git clone https://github.com/rea-cruitment/simple-sinatra-app.git'
+  #shell: 'git clone https://github.com/rea-cruitment/simple-sinatra-app.git'
+  shell: 'git clone https://github.com/reagrouptest/app-code.git'
   args:
     chdir: '/data/apps'
 
