--- a/deploy/roles/app_deploy/tasks/cleanup.yml
+++ b/deploy/roles/app_deploy/tasks/cleanup.yml
@@ -12,3 +12,13 @@
   file:
     path: /backup
     state: absent
+
+- name: List any existing session of sinatra.
+  shell: "ps -ef | grep -v grep | grep -w rackup | awk '{print $2}'"
+  register: process_id
+  ignore_errors: yes
+
+- name: Kill the session.
+  shell: "kill -9 {{ item }}"
+  with_items: "{{ process_id.stdout_lines }}"
+  ignore_errors: yes
