--- a/aws config/ec2.yml
+++ b/aws config/ec2.yml
@@ -111,7 +111,7 @@ Resources:
       VolumeType: gp2
       Encrypted: true
       ##Provide your kmskeyId here
-      KmsKeyId: arn:aws:kms:ap-southeast-2:929562907700:key/3b6448a4-3ec7-4bac-8ef5-57d79b3d82de
+      KmsKeyId: arn:aws:kms:ap-southeast-2:929562907700:key/f35e98f8-ff9f-44cf-962e-807c3c1cefc3
       Tags: 
         - Key:    Name
           Value:  !Join ['-', [ !Ref 'AppName', vol]]
@@ -231,7 +231,7 @@ Resources:
         - !GetAtt PubEc2InstanceSG.GroupId
       Tags:
         - Key:    Name
-          Value:  !Join ['-', [ Public, !Ref 'AppName'], 'win']
+          Value:  !Join ['-', [ Public, !Ref 'AppName', win]]
         - Key: env:code
           Value: !FindInMap [ENVIRONS, !Ref 'envCode', ABRV]
         - Key: state:scheduleName
